try to fix more tests